src/app/shared/components/header/header.css
.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 15px;
  box-shadow: 0 0 7px 0px rgba(0, 0, 0, 0.5);
  min-height: 60px;
  background: linear-gradient(45deg, #003956, transparent);

  .logo {
    font-size: 16px;
    color: #fff;
    filter: drop-shadow(0px 2px 2px black);
  }

  nav {
    display: flex;
    align-items: center;
    gap: 10px;
  }

  .player {
    outline: 1px solid;
    border-radius: 50%;
    padding: 5px;
    width: 40px;
    height: 40px;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: #fff;
  }
}

.dialog-to-shared {
  padding: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 10px;
  outline: 1px solid;
  border-radius: 8px;
  background-color: #fff;

  .link {
    padding: 10px;
    font-size: 14px;
    outline: 1px solid;
    border-radius: 10px;
    overflow: hidden;
  }
}

.example-list {
  width: 100px;
  border: solid 1px #ccc;
  border-radius: 5px;
  background: #fff;
  text-align: center;
  padding: 10px;
  margin: 0;
}

.example-list > li {
  list-style-type: none;
  border-bottom: solid 1px #8b8b8b;
  padding: 8px 0;
}

.example-list > li:last-child {
  border-bottom: none;
}

